--- a/Projekt.css
+++ b/Projekt.css
@@ -24,8 +24,9 @@ nav{
 
 .dropdown-content{
     display: none;
-    background-color: #eeeee6;
-    width: 13%;
+    background-color: #41a6d1;
+    width: 10%;  /* Adjust width to fit within parent container */
+    text-decoration: none;
 }
 
 #dropdown-Color{
@@ -35,17 +36,18 @@ nav{
     display: none;
 }
 
-#brands #color{
+#brands, #color #size{
     display: grid;
 }
 
 .dropbtn{
-    padding: 20% 50%;
+    padding: 10px 20px; /* Adjust padding for better alignment */
+    width: 10%;
     border-radius: 10px;
     text-align: center;
     font-weight: bold;
     font-size: 15px;
-    background-color: whitesmoke;;
+    background-color: whitesmoke;
     border-color: #FF71CD;
     border-width: 3px;
     color: #4990d8;
@@ -54,25 +56,28 @@ nav{
 
 .sorter{
     display: grid;
-    grid-template-rows: repeat(2,1fr);
+    grid-template-rows: repeat(2, auto); /* Adjust to auto to fit content */
     gap: 20px;
 }
+
 .dropdown{
     display: block;
-    position: fixed;
+    position: relative; /* Change to relative to fit within parent container */
     top: 20%;
-    width: 4%;
+    width: auto; /* Adjust width to fit content */
     padding: 20px;
     margin-left: 2%;
 }
+
 .container{
     width: 900px;
     max-width: 90vw;
-    margin:auto;
+    margin: auto;
     text-align: center;
     padding-top: 10px;
     transition: transform .1s;
 }
+
 svg{
     width: 30px;
 }
@@ -322,39 +327,6 @@ body.showCart .container{
     height: 10%;
     width: 20%;
 }
-
-.choice {
-    background-color: rgb(181, 192, 208);
-    flex-basis: 100%; /* Set the desired height */
-    padding: 10px; /* Adjust padding as needed */
-    margin: 10px;
-    display: block;
-}
-
-/*
-.boxes{
-    display: none;
-    justify-content: flex-start;
-    flex-basis: 40%;
-    flex-direction: row;
-}
-*/
-
-/* button{
-    background-color:  white;
-    border-color: black;
-    color:  rgb(93, 4, 90);
-    padding: 10px;
-    margin: 0px;
-    border-radius: 50px;
-    border-width: 5px;
-    font-family: bald;
-}
-button:hover{
-    background-color: rgb(31, 73, 94);
-    color:  white;
-} */
-
 
 /*Screen movment addaption*/
 
