--- a/Projekt.css
+++ b/Projekt.css
@@ -19,7 +19,7 @@ nav{
 .decoration{
     text-decoration: none;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 23px;
     color: #4990d8;
 }
 
@@ -27,62 +27,50 @@ nav{
     display: none;
     flex-wrap: wrap;
     background-color: whitesmoke;
-    width: 250px;  /* Adjust width to fit within parent container */
+    width: 3%;  /* Adjust width to fit within parent container */
     border-radius: 5px;
 }
 .dropdown-link{
-    padding: 3px;
+    padding: 2px;
+    width: 14%;
     color: #4990d8;
     text-decoration: none;
     font-weight: bold;
 }
 
-#dropdown-Color{
-    display: none;
-}
-#dropdown-Brand{
-    display: none;
-}
-
-#brands, #color #size{
-    display: grid;
-}
-
 .dropbtn{
-    padding: 10px 20px; /* Adjust padding for better alignment */
-
+    padding: 10px 15px; /* Adjust padding for better alignment */
+    width: 150px;
     border-radius: 10px;
     text-align: center;
     font-weight: bold;
     font-size: 15px;
     background-color: whitesmoke;
     border-color: #5356FF;
-    border-width: 3px;
+    border-width: 2px;
     color: #4990d8;
     box-shadow: 3px 4px 8px 3px rgba(0, 0, 0, 0.2);
 }
 
 #sorter{
-    position: fixed;    
-    top: 20%;
+    position: sticky;   
+    height: 20vh; 
+    bottom: 420px;
+    top: 20px;
+    width: 13%;
     display: grid;
-    grid-template-rows: repeat(2, auto); 
-    gap: 20px;
     visibility: visible;
-}
-
-#sorter .container{
-    display: grid;
-    grid-template-rows: repeat(2,auto);
 }
 
 .dropdown{
     display: block;
-    position: relative; 
-    top: 20%;
-    width: 100%;
-    padding: 20px;
-    margin-left: 2%;
+    position: sticky; 
+    width: auto;
+    padding: 10% 0 0 5%;
+}
+
+.dropdown-content.show{
+    display: contents;
 }
 
 .container{
@@ -92,6 +80,10 @@ nav{
     text-align: center;
     padding-top: 10px;
     transition: transform .1s;
+}
+
+.sorterBtn{
+    display: none;
 }
 
 svg{
@@ -134,6 +126,7 @@ header .icon-cart span{
     grid-template-columns: repeat(4,1fr);
     gap: 20px;
     margin: -5px;
+    margin-bottom: -40%;
 }
 
 .listProduct .item{
@@ -151,12 +144,11 @@ header .icon-cart span{
 }
 
 .listProduct .item button{
-    background-color: black;
+    background-color: #4990d8;
     color: white;
     padding: 5px 10px;
     border-radius: 20px;
     margin-top: 10px;
-    border: none;
     cursor: pointer;
 }
 #cartTab{
@@ -164,7 +156,7 @@ header .icon-cart span{
     background-color: #353432;
     color: #eee;
     position: sticky;
-    height: 100vh;
+    height: 90vh;
     float: right;
     inset: 0 -400px 0 auto;
     display: none;
@@ -194,7 +186,7 @@ body.showCart .container{
 }
 
 #cartTab .btn button{
-    background-color: #E8BC0E;
+    background-color: #4990d8;
     border: none;
     font-family: Poppins;
     font-weight: 500;
@@ -245,11 +237,17 @@ body.showCart .container{
 }
 
 /* PAGE CHECKOUT */
-.checkoutLayout{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    gap: 50px;
-    padding: 20px;
+
+.right{
+    height: 50%;
+    width: 40%;
+    left: 66%;
+    position: relative;
+    top: -159vh;
+}
+.returnCart{
+    height: 180vh;
+    width: 55%;
 }
 
 .checkoutLayout .right{
@@ -265,7 +263,7 @@ body.showCart .container{
 
 .checkoutLayout .right .form{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2,1fr);
     gap: 20px;
     border-bottom: 1px solid ;
     padding-bottom: 20px;
@@ -280,7 +278,7 @@ body.showCart .container{
 .checkoutLayout .form select{
     width: 100%;
     padding: 10px 20px;
-    box-sizing: border-box;
+    box-sizing: border-box;       
     border-radius: 20px;
     margin-top: 10px;
     border: 3px solid #67C6E3;
@@ -288,7 +286,6 @@ body.showCart .container{
     color: #fff;
     transition: border 500ms ease-out;
 }
-
 
 .checkoutLayout .row{
     display: flex;
@@ -311,6 +308,13 @@ body.showCart .container{
     font-weight: bold;
     color: #fff;
     background-color: #49d8b9;
+}
+
+.list{
+    overflow-y: scroll;
+    position: relative;
+    height: 45%;
+    width: 100%;
 }
 
 .returnCart h1{
@@ -347,18 +351,19 @@ body.showCart .container{
     justify-content: space-evenly;
     background-color: rgb(79, 118, 173);
     bottom: 0;
-    margin-top: 10%;
+    margin-top: 20%;
+    height: 35vh;
     width: 100%;
     border-top: 10px;
     border-color: black;
 }
 
-.filter{
+.legal{
     font-size: 20px;
-    padding: 20px;
+    padding: 20px; 
 }
 
-.legal{
+.socialmedias{
     font-size: 20px;
     padding: 20px; 
 }
@@ -406,12 +411,31 @@ input{
     background-color: whitesmoke¨;
     border-radius: 3px;
 }
-
+.moreInfo{
+    display: none;
+}
 /*Screen movment addaption*/
 
-@media screen and (max-width:992px) {
+@media screen and (max-width:1250px) {
+    .listProduct{
+        margin-bottom: -20%;
+    }
+    .sorterBtn{
+        display: flex;
+    }
+    #sorter{
+        display: none;
+    } 
+}
+
+@media screen and (max-width:998px) {
+    #footerDiv{
+        width: 100%;
+    }
     .listProduct{
         grid-template-columns: repeat(3,1fr);
+        margin-left: 50px;
+        margin-bottom: -20%;
     }
     .subbly{
         width: 49%;
@@ -419,21 +443,74 @@ input{
     .choseWindow{
         width: 100%;
     }
+    .checkoutLayout .right{
+        display: grid;
+        grid-template-columns: auto auto;
+    }
+    .sorterBtn{
+        display: flex;
+    }
+    #sorter{
+        display: none;
+    }
+    .mediafooter{
+        display: none;
+    }
+    .moreInfo{
+        display: flex;
+        font-size: 24px;
+    }
 }
 
 @media screen and (max-width:600px) {
+    #footerDiv{
+        width: 100%;
+    }
+    .listProduct{
+        grid-template-columns: repeat(1,1fr);
+        width: 70%;
+        margin: 10px;
+    }
     .subbly{
         width: auto;
     }
     .choseWindow{
         width: auto;
     }
+    .checkoutLayout{
+        width: 100px;
+    }
+    .right{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+    }
+    .returnCart .right{
+        display: grid;
+        grid-template-columns: auto auto auto;
+        height: auto;
+    }
+    body{
+        overflow-x: hidden;
+    }
+    .sorterBtn{
+        display: flex;
+    }
+    #sorter{
+        display: none;
+    }
+    .moreInfo{
+        display: flex;
+        font-size: 24px;
+    }
+    .socialmedias{
+        font-size: 20px;
+        padding-top: 20px;
+    }
 }
 
 @media screen {
     .choseWindow{
         width: 70%;
-    
     }
 }
 
