--- a/Projekt.css
+++ b/Projekt.css
@@ -3,6 +3,8 @@
 body{
     font-family: "Poppins", sans-serif;
     margin: 0;
+    background-color: #113311;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='250' height='250' viewBox='0 0 20 20'%3E%3Cg %3E%3Cpolygon fill='%23242' points='20 10 10 0 0 0 20 20'/%3E%3Cpolygon fill='%23242' points='0 10 0 20 10 20'/%3E%3C/g%3E%3C/svg%3E");
 }
 
 nav{
@@ -10,36 +12,39 @@ nav{
     align-items: center;
     justify-content: space-between;
     flex-direction: row;
+    background-color: #eeeee6;
+    padding: 10px;
+    border-radius: 10px;
 }
 .categories{
     display: flex;
-    margin: 0 0 0 20px;
+    margin: 0 20px 0 20px;
 }
 
 .decoration{
     text-decoration: none;
     font-weight: bold;
     font-size: 23px;
-    color: #4990d8;
+    color: #366ba0;
 }
 
 .dropdown-content{
     display: none;
     flex-wrap: wrap;
-    background-color: whitesmoke;
-    width: 3%;  /* Adjust width to fit within parent container */
+    background-color: #eee;
+    width: 100%;  /* Adjust width to fit within parent container */
     border-radius: 5px;
 }
 .dropdown-link{
     padding: 2px;
     width: 14%;
-    color: #4990d8;
+    color: #63abf4;
     text-decoration: none;
     font-weight: bold;
 }
 
 .dropbtn{
-    padding: 10px 15px; /* Adjust padding for better alignment */
+    padding: 10px 10px; /* Adjust padding for better alignment */
     width: 150px;
     border-radius: 10px;
     text-align: center;
@@ -53,12 +58,18 @@ nav{
 }
 
 #sorter{
+    display: flex;
+    flex-direction: column;
+    position: fixed;    
+    top: 20%;
     position: sticky;   
     height: 20vh; 
     bottom: 420px;
     top: 20px;
     width: 13%;
     display: grid;
+    grid-template-rows: repeat(2, auto); 
+    gap: 20px;
     visibility: visible;
 }
 
@@ -82,7 +93,7 @@ nav{
     transition: transform .1s;
 }
 
-.sorterBtn{
+#sorter-btn{
     display: none;
 }
 
@@ -96,6 +107,10 @@ header{
     justify-content: space-between;
     padding: 20px 0;
 }
+.icon-cart{
+    color: #b4d0ea;
+    font-size: 20px;
+}
 
 header .icon-cart{
     position: relative;
@@ -105,7 +120,7 @@ header .icon-cart span{
     display: inline;
     width: 30px;
     height: 30px;
-    background-color: red;
+    background-color: #4990d8;
     justify-self: center;
     align-items: center;
     color: whitesmoke;
@@ -162,7 +177,7 @@ header .icon-cart span{
     display: none;
     grid-template-rows: 70px 1fr 70px;
     transition: 1s;
-    bottom: 0px;    
+    top: 0px;  
 }
 
 body.showCart #cartTab{
@@ -238,12 +253,20 @@ body.showCart .container{
 
 /* PAGE CHECKOUT */
 
+.checkoutPart{
+    margin-bottom: 20vh;
+    height: 100%;
+}
+.backgroundItems{
+    background-color: whitesmoke;
+}
 .right{
     height: 50%;
     width: 40%;
     left: 66%;
     position: relative;
     top: -159vh;
+    clear: both;
 }
 .returnCart{
     height: 180vh;
@@ -264,9 +287,7 @@ body.showCart .container{
 .checkoutLayout .right .form{
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    gap: 20px;
-    border-bottom: 1px solid ;
-    padding-bottom: 20px;
+    border-bottom: 1px;
 }
 
 .checkoutLayout .form .group:nth-child(-n+3){
@@ -315,6 +336,7 @@ body.showCart .container{
     position: relative;
     height: 45%;
     width: 100%;
+    background-color: whitesmoke;
 }
 
 .returnCart h1{
@@ -417,41 +439,36 @@ input{
 /*Screen movment addaption*/
 
 @media screen and (max-width:1250px) {
+    .categories{
+        font-size: 15px;
+    }
     .listProduct{
         margin-bottom: -20%;
     }
-    .sorterBtn{
+    #sorter-btn{
         display: flex;
     }
-    #sorter{
-        display: none;
-    } 
 }
 
 @media screen and (max-width:998px) {
+    nav{
+        margin-left: 10px;
+    }
     #footerDiv{
         width: 100%;
+    }
+    #cartTab{
+        width: 50%;
+        height: 90vmax;
     }
     .listProduct{
         grid-template-columns: repeat(3,1fr);
         margin-left: 50px;
-        margin-bottom: -20%;
-    }
-    .subbly{
-        width: 49%;
-    }
-    .choseWindow{
-        width: 100%;
+        margin-bottom: 10%;
     }
     .checkoutLayout .right{
         display: grid;
         grid-template-columns: auto auto;
-    }
-    .sorterBtn{
-        display: flex;
-    }
-    #sorter{
-        display: none;
     }
     .mediafooter{
         display: none;
@@ -463,40 +480,43 @@ input{
 }
 
 @media screen and (max-width:600px) {
+    #sorter{
+        display: none;
+    }
+    nav{
+        margin-left: 10px;
+    }
     #footerDiv{
         width: 100%;
+    }
+    #cartTab{
+        width: 100%;
+        height: 90vmax;
     }
     .listProduct{
         grid-template-columns: repeat(1,1fr);
         width: 70%;
-        margin: 10px;
-    }
-    .subbly{
-        width: auto;
-    }
-    .choseWindow{
-        width: auto;
     }
     .checkoutLayout{
-        width: 100px;
+        width: 100%;
     }
     .right{
-        display: grid;
-        grid-template-columns: repeat(3,1fr);
+        left: 0px;
+        top: 60%;
+        width: 80%;
+    }
+    .returnCart{
+        width: 100%;
+        margin-bottom: -50%;
+        height: 100vh;
     }
     .returnCart .right{
         display: grid;
         grid-template-columns: auto auto auto;
-        height: auto;
+        width: 100%;
     }
     body{
         overflow-x: hidden;
-    }
-    .sorterBtn{
-        display: flex;
-    }
-    #sorter{
-        display: none;
     }
     .moreInfo{
         display: flex;
@@ -508,10 +528,5 @@ input{
     }
 }
 
-@media screen {
-    .choseWindow{
-        width: 70%;
-    }
-}
 
 
